# IPC-Threads-DB

./: .gitignore  CMakeLists.txt  README.md  Servidor_2_Teste.c  banco.json  cliente  cliente.c  servidor  servidor.c
Testes/: Cliente  Cliente_2_teste.c  Servidor2  Servidor_2_Teste.c  banco.h  banco.json
